syntax = "proto3";
option java_multiple_files = true;
package notification;


message NotificationRequest {
  int32 userId = 1;
  string notificationMessage = 2;
}

message GetNotificationRequest {
  int32 userId = 1;
}
message GetNotificationResponse {
  string list = 1;
}

message EmptyResponse {}

service NotificationService {
  rpc SendNotification (NotificationRequest) returns (EmptyResponse);
  rpc GetNotifications (GetNotificationRequest) returns (GetNotificationResponse);
}
